WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288581
Capture failure info in Thread::getRegisters() to help diagnose thread_get_state failures.
https://bugs.webkit.org/show_bug.cgi?id=288581
Summary
Capture failure info in Thread::getRegisters() to help diagnose thread_get_st...
Mark Lam
Reported
2025-02-25 23:49:58 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-25 23:50:25 PST
<
rdar://problem/145637886
>
Mark Lam
Comment 2
2025-02-25 23:57:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41385
EWS
Comment 3
2025-02-26 01:18:20 PST
Committed
291100@main
(1a5c3c518729): <
https://commits.webkit.org/291100@main
> Reviewed commits have been landed. Closing PR #41385 and removing active labels.
EWS
Comment 4
2025-02-26 13:22:47 PST
Committed
289651.184@safari-7621-branch
(b8d2b7744638): <
https://commits.webkit.org/289651.184@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2684 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug