Capture failure info in Thread::getRegisters() to help diagnose thread_get_state failures. https://bugs.webkit.org/show_bug.cgi?id=288581 rdar://145637886

Reviewed by Yusuke Suzuki.

When thread_get_state fails, it would be good to know why in order to debug issues.
We'll now capture the kern_return_t in the crash info.

* Source/WTF/wtf/posix/ThreadingPOSIX.cpp:
(WTF::Thread::getRegisters):

Canonical link: https://commits.webkit.org/291100@main